[package]
name = "mcc"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
flate2 = "1.0"
hostname = "0.4"

# Optional GCS support (using gsutil CLI)
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
default = []
gcs = ["tokio"]
